# droidrun-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/droidrun-adb/: Cargo.toml  README.md
crates/droidrun-adb/examples/: app_management.rs  basic.rs  device_info.rs  file_transfer.rs  input_control.rs  port_forward.rs  reverse_forward.rs  screenshot.rs
crates/droidrun-adb/src/: connection.rs  device.rs  error.rs  lib.rs  models.rs  server.rs
crates/droidrun-adb/tests/: integration.rs
crates/droidrun-cli/: Cargo.toml  README.md
crates/droidrun-cli/src/: main.rs
crates/droidrun-core/: Cargo.toml  README.md
crates/droidrun-core/examples/: app_automation.rs  driver_basics.rs  element_search.rs  portal_setup.rs  recording.rs  state_provider.rs
crates/droidrun-core/src/: error.rs  lib.rs
crates/droidrun-core/src/driver/: android.rs  mod.rs  recording.rs
crates/droidrun-core/src/helpers/: mod.rs
crates/droidrun-core/src/portal/: a11y.rs  client.rs  keyboard.rs  manager.rs  mod.rs
crates/droidrun-core/src/ui/: coord.rs  filter.rs  formatter.rs  geometry.rs  mod.rs  provider.rs  search.rs  state.rs
crates/droidrun-core/tests/: integration.rs
