[workspace]
resolver = "2"
members = [
    "crates/droidrun-adb",
    "crates/droidrun-core",
    "crates/droidrun-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85.0"
authors = ["Sikrid25"]
repository = "https://github.com/Sikrid25/droidrun-rs"
homepage = "https://github.com/Sikrid25/droidrun-rs"
keywords = ["android", "adb", "automation", "mobile"]
categories = ["development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait
async-trait = "0.1"

# Regex
regex = "1"

# Temp files
tempfile = "3"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
tokio-test = "0.4"

# Internal crates
droidrun-adb = { path = "crates/droidrun-adb", version = "0.1.0" }
droidrun-core = { path = "crates/droidrun-core", version = "0.1.0" }
