[package]
name = "droidrun-cli"
description = "CLI tool for Android device automation — tap, swipe, screenshot, UI state, app management"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "droidrun"
path = "src/main.rs"

[dependencies]
droidrun-core = { workspace = true }
droidrun-adb = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
